test: Added integration tests for Liferay (#216)
Added modules to test portlet add-on on Liferay portlet container

Closes #204

Co-authored-by: Mikhail Shabarov <mikhail@vaadin.com>
Co-authored-by: Mikhail Shabarov <61410877+mshabarov@users.noreply.github.com>